Added zephyr sdk for building the blinky app

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -24,9 +24,27 @@
 
 
 cmake_minimum_required(VERSION 3.11.1)
+#-----------------------------
+# Compiler and generic options
+#-----------------------------
+set(ZEPHYR_SDK_INSTALL_DIR $ENV{ZEPHYR_SDK_INSTALL_DIR})
+set(CROSS_TOOLCHAIN ${ZEPHYR_SDK_INSTALL_DIR}/arm-zephyr-eabi/bin/arm-zephyr-eabi-)
+set(CMAKE_SYSTEM_NAME Generic)
+set(CMAKE_SYSTEM_PROCESSOR arm)
+set(CMAKE_CROSSCOMPILING 1)
+
+set(CMAKE_C_COMPILER ${CROSS_TOOLCHAIN}gcc${TOOLCHAIN_EXT} CACHE INTERNAL "C Compiler")
+set(CMAKE_CXX_COMPILER ${CROSS_TOOLCHAIN}g++${TOOLCHAIN_EXT} CACHE INTERNAL "C++ Compiler")
+set(CMAKE_ASM_COMPILER ${CROSS_TOOLCHAIN}gcc${TOOLCHAIN_EXT} CACHE INTERNAL "ASM Compiler")
+set(CMAKE_OBJCOPY ${CROSS_TOOLCHAIN}objcopy CACHE INTERNAL "Objcopy tool")
+set(CMAKE_OBJDUMP ${CROSS_TOOLCHAIN}objdump CACHE INTERNAL "Objdump tool")
+set(CMAKE_SIZE_UTIL ${CROSS_TOOLCHAIN}size CACHE INTERNAL "Size tool")
+set(CMAKE_C_GDB ${CROSS_TOOLCHAIN}gdb-py CACHE INTERNAL "Debugger")
+set(CMAKE_AR ${CROSS_TOOLCHAIN}gcc-ar CACHE INTERNAL "Assembler")
+set(CMAKE_RANLIB ${CROSS_TOOLCHAIN}gcc-ranlib CACHE INTERNAL "Ranlib")
+
 set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
 
-#################### CONFIGURABLE SECTION ###########################
 enable_language(C ASM)
 # Project name
 project(apps)
@@ -34,9 +52,7 @@ project(apps)
 ## These values should be the same in kernel CMakeLists.txt file
 set(MCU STM32F429xx)
 set(MCU_SPEC  cortex-m4)
-set(FLOAT_SPEC "-mfloat-abi=hard -mfpu=fpv4-sp-d16")
-
-#####################################################################
+#~ set(FLOAT_SPEC "-mfloat-abi=hard -mfpu=fpv4-sp-d16") #TODO: Add support for fpu in the kernel as well.
 
 set(APP_LINKER_SCRIPT app_base.ld)
 
@@ -74,23 +90,23 @@ set(CMAKE_EXE_LINKER_FLAGS " \
 -nostdlib \
 -Wl,--undefined=main \
 -Wl,--emit-relocs \
-"CACHE INTERNAL "Linker options")
+" CACHE INTERNAL "Linker options")
 
 #------------------
 # Debug Flags
 #------------------
-set(CMAKE_C_FLAGS_DEBUG "-Og -g -gdwarf-3 -gstrict-dwarf " CACHE INTERNAL "C Compiler options for debug build type")
-set(CMAKE_CXX_FLAGS_DEBUG "-Og -g -gdwarf-3 -gstrict-dwarf " CACHE INTERNAL "C++ Compiler options for debug build type")
-set(CMAKE_ASM_FLAGS_DEBUG "-Og -g -gdwarf-3 -gstrict-dwarf " CACHE INTERNAL "ASM Compiler options for debug build type")
-set(CMAKE_EXE_LINKER_FLAGS_DEBUG "" CACHE INTERNAL "Linker options for debug build type")
+#set(CMAKE_C_FLAGS_DEBUG "-Og -g -gdwarf-3 -gstrict-dwarf " CACHE INTERNAL "C Compiler options for debug build type")
+#set(CMAKE_CXX_FLAGS_DEBUG "-Og -g -gdwarf-3 -gstrict-dwarf " CACHE INTERNAL "C++ Compiler options for debug build type")
+#set(CMAKE_ASM_FLAGS_DEBUG "-Og -g -gdwarf-3 -gstrict-dwarf " CACHE INTERNAL "ASM Compiler options for debug build type")
+#set(CMAKE_EXE_LINKER_FLAGS_DEBUG "" CACHE INTERNAL "Linker options for debug build type")
 
 #------------------
 # Release Flags
 #-----------------
-set(CMAKE_C_FLAGS_RELEASE "-Os " CACHE INTERNAL "C Compiler options for release build type")
-set(CMAKE_CXX_FLAGS_RELEASE "-Os " CACHE INTERNAL "C++ Compiler options for release build type")
-set(CMAKE_ASM_FLAGS_RELEASE "" CACHE INTERNAL "ASM Compiler options for release build type")
-set(CMAKE_EXE_LINKER_FLAGS_RELEASE " " CACHE INTERNAL "Linker options for release build type")
+#set(CMAKE_C_FLAGS_RELEASE "-Os " CACHE INTERNAL "C Compiler options for release build type")
+#set(CMAKE_CXX_FLAGS_RELEASE "-Os " CACHE INTERNAL "C++ Compiler options for release build type")
+#set(CMAKE_ASM_FLAGS_RELEASE "" CACHE INTERNAL "ASM Compiler options for release build type")
+#set(CMAKE_EXE_LINKER_FLAGS_RELEASE " " CACHE INTERNAL "Linker options for release build type")
 
 #------------------
 # Position Independent Code Flags
@@ -98,117 +114,111 @@ set(CMAKE_EXE_LINKER_FLAGS_RELEASE " " CACHE INTERNAL "Linker options for releas
 string(APPEND PIC_FLAGS "-fpic -msingle-pic-base -mpic-register=r9 -mno-pic-data-is-text-relative -mlong-calls")
 #string(APPEND PIC_FLAGS "-fpic -mlong-calls")
 
-if(CMAKE_CROSSCOMPILING STREQUAL "1")
-    # Control specific options if crosscompiling
 
-    message(STATUS "[INFO] Cross compiling for ${MCU}")
-    message(STATUS "[INFO] Building Apps")
+message(STATUS "[INFO] Cross compiling for ${MCU}")
+message(STATUS "[INFO] Building Apps")
 
-    #-------------------
-    # General Flags for cross
-    #-------------------
-    string(APPEND OBJECT_GEN_FLAGS " \
-    -mcpu=${MCU_SPEC} \
-    -mthumb \
-    -mthumb-interwork \
-    -mabi=aapcs \
-    ${FLOAT_SPEC} \
-    ${PIC_FLAGS} \
-    ")
+#-------------------
+# General Flags for cross
+#-------------------
+string(APPEND OBJECT_GEN_FLAGS " \
+-mcpu=${MCU_SPEC} \
+-mthumb \
+-mthumb-interwork \
+-mabi=aapcs \
+${FLOAT_SPEC} \
+${PIC_FLAGS} \
+")
 
-    #-------------------
-    # CFLAGS for cross
-    #-------------------
-    string(APPEND CMAKE_C_FLAGS " \
-    ${OBJECT_GEN_FLAGS} \
-    ")
+#-------------------
+# CFLAGS for cross
+#-------------------
+string(APPEND CMAKE_C_FLAGS " \
+${OBJECT_GEN_FLAGS} \
+")
 
-    #-------------------
-    # ASMFLAGS for cross
-    #-------------------
-    string(APPEND CMAKE_ASM_FLAGS " \
-    ${OBJECT_GEN_FLAGS} \
-    ")
+#-------------------
+# ASMFLAGS for cross
+#-------------------
+string(APPEND CMAKE_ASM_FLAGS " \
+${OBJECT_GEN_FLAGS} \
+")
 
-    #-------------------
-    # LFLAGS for cross
-    #-------------------
-    string(APPEND CMAKE_EXE_LINKER_FLAGS " \
-    ${OBJECT_GEN_FLAGS} \
-    ")
+#-------------------
+# LFLAGS for cross
+#-------------------
+string(APPEND CMAKE_EXE_LINKER_FLAGS " \
+")
 
-    ######################################################################
-    # @Target: <app_name>
-    # @Brief: build the app
-    ######################################################################
+######################################################################
+# @Target: <app_name>
+# @Brief: build the app
+######################################################################
 
-    # Fetch the linker script for app
-    set(LINKER_SCRIPT "${APP_LINKER_SCRIPT}")
-    find_file(LINKER_SCRIPT_PATH
-        NAMES "${LINKER_SCRIPT}"
-        PATHS
-        ${CMAKE_CURRENT_LIST_DIR}
+# Fetch the linker script for app
+set(LINKER_SCRIPT "${APP_LINKER_SCRIPT}")
+find_file(LINKER_SCRIPT_PATH
+    NAMES "${LINKER_SCRIPT}"
+    PATHS
+    ${CMAKE_CURRENT_LIST_DIR}
+    )
+
+if(${LINKER_SCRIPT_PATH} STREQUAL LINKER_SCRIPT_PATH-NOTFOUND)
+    message(FATAL_ERROR "[ERRR] Could not find linker script ${LINKER_SCRIPT}")
+else()
+    message(STATUS "[INFO] Using linker file at ${LINKER_SCRIPT_PATH}")
+    string(APPEND CMAKE_EXE_LINKER_FLAGS "-T${LINKER_SCRIPT_PATH} ")
+endif()
+
+# Add new apps like this
+list(APPEND APPS_NAMES "blinky")
+list(APPEND APPS_COMPILE_FLAGS " ")
+
+# Declare all app targets
+list(LENGTH APP_NAMES APP_COUNT)
+math(EXPR P_APP_COUNT "${APP_COUNT} + 1")
+message(STATUS "[INFO] Adding ${P_APP_COUNT} apps")
+#math(EXPR APP_COUNT "${APP_COUNT} - 1")
+foreach(i RANGE ${APP_COUNT})
+    list(GET APPS_NAMES ${i} APP_NAME)
+    list(GET APPS_COMPILE_FLAGS ${i} APP_COMPILE_FLAGS)
+
+    message(STATUS "[INFO] Adding app ${APP_NAME} with compile flags ${APP_COMPILE_FLAGS}")
+
+    # fetch app sources
+    file(GLOB APP_SOURCES ${APP_NAME}/*.c)
+
+    # Add executable target
+    add_executable(${APP_NAME}.elf
+        ${PROJECT_SOURCE_DIR}/app_startup.s
+        ${APP_SOURCES}
+        )
+    # Generate disassembly
+    #~ objdump(${APP_NAME}.elf)
+
+    target_include_directories(${APP_NAME}.elf
+        PUBLIC
+        ${CMAKE_CURRENT_LIST_DIR}/${APP_NAME}
+        ${CMAKE_CURRENT_LIST_DIR}/lib
         )
 
-    if(DEFINED LINKER_SCRIPT_PATH)
-        message(STATUS "[INFO] Using linker file at ${LINKER_SCRIPT_PATH}")
-        string(APPEND CMAKE_EXE_LINKER_FLAGS "-T${LINKER_SCRIPT_PATH} ")
+    target_link_libraries(${APP_NAME}.elf
+        PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}/lib/libsys_module.a
+        )
+
+    if(APP_COMPILE_FLAGS STREQUAL " ")
     else()
-        message(FATAL_ERROR "[ERRR] Could not find linker script ${LINKER_SCRIPT}")
-    endif()
-
-    # Add new apps like this
-    list(APPEND APPS_NAMES "blinky")
-    list(APPEND APPS_COMPILE_FLAGS " ")
-
-    # Declare all app targets
-    list(LENGTH APP_NAMES APP_COUNT)
-    math(EXPR P_APP_COUNT "${APP_COUNT} + 1")
-    message(STATUS "[INFO] Adding ${P_APP_COUNT} apps")
-    #math(EXPR APP_COUNT "${APP_COUNT} - 1")
-    foreach(i RANGE ${APP_COUNT})
-        list(GET APPS_NAMES ${i} APP_NAME)
-        list(GET APPS_COMPILE_FLAGS ${i} APP_COMPILE_FLAGS)
-
-        message(STATUS "[INFO] Adding app ${APP_NAME} with compile flags ${APP_COMPILE_FLAGS}")
-
-        # fetch app sources
-        file(GLOB APP_SOURCES ${APP_NAME}/*.c)
-
-        # Add executable target
-        add_executable(${APP_NAME}.elf
-            ${PROJECT_SOURCE_DIR}/app_startup.s
-            ${APP_SOURCES}
-            )
-        # Generate disassembly
-        objdump(${APP_NAME}.elf)
-
-        target_include_directories(${APP_NAME}.elf
-            PUBLIC
-            ${CMAKE_CURRENT_LIST_DIR}/${APP_NAME}
-            ${CMAKE_CURRENT_LIST_DIR}/lib
-            )
-
-        target_link_libraries(${APP_NAME}.elf
-            PRIVATE
-            ${CMAKE_CURRENT_LIST_DIR}/lib/libsys_module.a
-            )
-
-        if(APP_COMPILE_FLAGS STREQUAL " ")
-        else()
         target_compile_definitions(${APP_NAME}.elf
-                PUBLIC
-                ${APP_COMPILE_FLAGS}
-                )
-        endif()
-    endforeach()
+            PUBLIC
+            ${APP_COMPILE_FLAGS}
+            )
+    endif()
+endforeach()
 
-    ######################################################################
-    # @Target: gdb
-    # @Brief: Start gdb client
-    ######################################################################
-    gdb()
+######################################################################
+# @Target: gdb
+# @Brief: Start gdb client
+######################################################################
+#~ gdb()
 
-else()
-    message(FATAL_ERROR "CMAKE_CROSSCOMPILING is not set. Are you using cross compiler?")
-endif()
