--- a/prj.conf
+++ b/prj.conf
@@ -1,2 +1,11 @@
-CONFIG_HEAP_MEM_POOL_SIZE=256
+CONFIG_HEAP_MEM_POOL_SIZE=2048
 CONFIG_OUTPUT_DISASSEMBLE_ALL=y
+
+CONFIG_LOG=y
+CONFIG_FAULT_DUMP=2
+
+CONFIG_CONSOLE=n
+CONFIG_SERIAL=n
+CONFIG_UART_CONSOLE=n
+CONFIG_USB_UART_CONSOLE=n
+CONFIG_SEMIHOST_CONSOLE=y
